src/styles/global.module.css
.backgroundApp {
    background-attachment: fixed; /* Default to scroll */
  }
  
  /* Apply fixed attachment only on devices that support it */
  @supports (position: -webkit-sticky) or (position: sticky) {
    .backgroundApp {
      background-attachment: fixed;
    }
  }
  
  /* Additional media query for tablets and mobiles in landscape mode */
  @media (max-width: 1024px) and (orientation: landscape) {
    .backgroundApp {
      background-attachment: fixed;
    }
  }

/* ----- home page ----- */
.myImage {
    border-radius: 500px 500px 0px 0px;
    background-image: url('../assets/me/its-me.GIF');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top;
}

h1 {
    line-height: initial;
    font-size: calc(44px + (94 - 44) * ((100vw - 270px) / (1600 - 270)));
}

h2 {
    line-height: initial;
    font-size: calc(14px + (24 - 14) * ((100vw - 270px) / (1600 - 270)));
}

/* ----- about page ----- */
h3 {
    line-height: initial;
    font-size: calc(24px + (50 - 24) * ((100vw - 270px) / (1600 - 270)));
}

p {
    font-size: calc(14px + (20 - 14) * ((100vw - 270px) / (1600 - 270)));
}

.navbar {
    background: transparent;
    transition-duration: .5s;
}

.navbarActive {
    backdrop-filter: blur(5px);
    transition-duration: .5s;
}

